try to fix the stretch

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -140,8 +140,11 @@ main {
     text-decoration: none;
     color: #631c37;
     font-size: 1.3rem;
-    justify-content: center;
-    align-items: center;
+}
+
+img {
+    width: 100%;
+    object-fit: cover;
 }
 
 .img-container:hover {
